# SMBR-api-server

./: .gitmodules  CMakeLists.txt  Changelog.md  README.md  api.yaml
async-can/: CMakeLists.txt
async-can/src/: CanBus.cpp  CanBus.hpp  CanMessage.cpp  CanMessage.hpp  CanRequest.cpp  CanRequest.hpp  CanRequestManager.cpp  CanRequestManager.hpp  main.cpp
gate/: MyCustomApi.cpp  MyCustomApi.h  OAIDefaultApi.cpp  OAIDefaultApi.h  OAIEnum.h  OAIHelpers.cpp  OAIHelpers.h  OAIHttpFileElement.cpp  OAIHttpFileElement.h  OAIHttpRequest.cpp  OAIHttpRequest.h  OAIMyMessageDto.cpp  OAIMyMessageDto.h  OAIMyTemperatureDto.cpp  OAIMyTemperatureDto.h  OAIOauth.h  OAIObject.h  OAIServerConfiguration.h  OAIServerVariable.h  client.pri  codes.hpp
gate/base/: CommonModule.cpp  CommonModule.hpp
gate/can/: CanBus.cpp  CanBus.hpp  CanHandler.cpp  CanHandler.hpp  CanIdGenerator.cpp  CanIdGenerator.hpp  CanMessage.cpp  CanMessage.hpp  CanRequest.cpp  CanRequest.hpp  CanRequestManager.cpp  CanRequestManager.hpp  CanService.cpp  CanService.hpp  CanUtils.cpp  CanUtils.hpp  ICanBus.cpp  ICanBus.hpp
gate/control/: ControlModule.cpp  ControlModule.hpp
gate/core/: CoreModule.cpp  CoreModule.hpp
gate/sensor/: SensorModule.cpp  SensorModule.hpp
gate/system/: SystemModule.cpp  SystemModule.hpp
oatpp-server/: App.cpp  AppComponent.hpp  MyResponseInterceptor.hpp
oatpp-server/controller/: Controller.cpp  Controller.hpp  MyController.cpp  MyController.hpp
oatpp-server/dto/: ErrorResponseDto.hpp  ModuleEnum.hpp  MyCoreTempResponseDto.hpp  MyIntensityDto.hpp  MyLoadResponseDto.hpp  MyMessageDto.hpp  MyModuleActionRequestDto.hpp  MyModuleDto.hpp  MyModuleInfoDto.hpp  MyPingResponseDto.hpp  MySupplyTypeResponseDto.hpp  MyTempDto.hpp  MyTemperatureDto.hpp  MyUidDto.hpp
oatpp-server/interceptors/: ResponseInterceptor.hpp
testing/: api_response_time.py  efective_speed.py  ping_test.cpp  ping_test_parallel.py
testing_scripts/: README.md
